make compatible with Java 11 LTS